src/defaultV2-theme/blocks/sd-table.scss
.sd-table {
  width: 100%;
  background: $question-background;
  border-collapse: separate;
  border-spacing: 0;
  white-space: normal;

  &>thead>tr>th {
    border-top: 0;
    border-bottom: calcSize(2) solid transparent;
  }
}

.sd-table__cell {
  border-top: calcSize(1) solid transparent;
  border-bottom: calcSize(1) solid transparent;
  background-clip: padding-box;
}

.sd-root-modern:not(.sd-root-modern--mobile) {
  .sd-table__cell:not(.sd-table__cell--actions):not(.sd-table__cell--action):not(.sd-table__cell--empty.sd-table__cell--error) {
    width: 10000px;
  }
}

.sd-table__row:first-of-type>.sd-table__cell {
  border-top: 0;
}

.sd-table__row:last-of-type>.sd-table__cell {
  border-bottom: 0;
}

.sd-table--align-top {
  .sd-table__cell {
    vertical-align: top;
  }
}

.sd-table--no-header {
  padding-top: calcSize(3);
}

.sd-panel:not(.sd-panel--as-page) {
  &>.sd-panel__content {
    .sd-table--no-header {
      padding-top: 0;
    }

    .sd-question--table {
      .sd-question__content {
        padding-bottom: calcSize(0.25);
        margin-bottom: calcSize(-0.25);
        padding-top: calcSize(1);
        margin-top: calcSize(-1);
      }

      &>.sd-question__header {
        &+.sd-question__content {
          padding-top: calcSize(2);

          .sd-table--no-header {
            padding-top: calcSize(4);
          }
        }
      }
    }


    .sd-question--table>.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
      margin-top: calcSize(-3);
    }

    .sd-question--table.sd-question--error-top>.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
      margin-top: 0;
    }

    &>.sd-row:not(:first-of-type) .sd-question--table>.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
      margin-top: calcSize(-2);
    }

    &>.sd-row:not(:first-of-type) .sd-question--table.sd-question--error-top>.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
      margin-top: calcSize(0);
    }

    .sd-question--table>.sd-question__header+.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
      margin-top: calcSize(1);
    }

    &>.sd-row:not(:first-of-type) .sd-question--table>.sd-question__header+.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
      margin-top: calcSize(1);
    }
  }
}

.sd-root-modern:not(.sd-root-modern--mobile) {
  .sd-table--alternate-rows {
    margin-left: calcSize(1);
    margin-right: calcSize(1);
    width: calc(100% - 2 * #{$base-unit});

    .sd-table__cell:not(.sd-table__cell--header):first-of-type {
      padding-left: calcSize(2);
    }

    .sd-table__cell:last-of-type {
      padding-right: calcSize(2);
    }

    .sd-table__row:nth-of-type(odd) {

      &>td,
      td:first-of-type {
        background-color: $background-dim-light;

        &.sd-matrix__text--checked {
          background-color: $primary-light;
        }

        .sd-input {
          background-color: $primary-foreground;
        }

        .sd-item:not(.sd-item--error) {
          .sd-item__decorator {
            background-color: var(--sjs-general-backcolor, var(--background, #fff));
          }

          &.sd-item--checked .sd-item__decorator {
            background-color: $primary;
          }

          &.sd-radio--checked .sd-radio__control:focus+.sd-radio__decorator:after {
            background-color: $primary-foreground;
          }
        }
      }
    }
  }
}

.sd-table__cell {
  @include useEditorFontSize;
  font-weight: normal;
  font-size: $font-editorfont-size;
  line-height: multiply(1.5, $font-editorfont-size);
  padding: 0 calcSize(1);
  color: $foreground;
  text-align: center;

  &:not(.sd-table__cell--empty):not(.sd-table__cell--actions):not(:empty) {
    min-width: calcSize(15);
  }
}

.sd-table__cell--error {
  border: none;
  padding: 0 calcSize(1);

  .sd-question__erbox {
    margin: 0;
  }
}

.sd-table__cell--error-top {
  vertical-align: bottom;
  padding-top: calcSize(1);
}

.sd-table__cell--error-bottom {
  vertical-align: top;
  padding-bottom: calcSize(1);
}

.sd-table__cell--item {
  .sd-selectbase__item {
    text-align: center;
  }

  .sd-selectbase__label {
    justify-content: center;
  }
}

.sd-question--disabled .sd-table__cell {
  opacity: 0.25;
}

.sd-root--readonly .sd-question--disabled .sd-table__cell {
  opacity: 1;
}

.sd-table__cell--header .sv-vue-title-additional-div,
.sd-table__cell--header {
  font-size: 0;
  line-height: 0;
}

.sd-table__cell--header {
  span {
    @include useEditorFontSize;
    font-size: $font-editorfont-size;
    line-height: multiply(1.5, $font-editorfont-size);
    font-weight: $font-questiontitle-weight;
  }
}

.sd-table__cell--header {
  font-weight: 600;
  color: $font-questiontitle-color;
  vertical-align: top;
  padding: calcSize(1.5) calcSize(1);

  &:not(.sd-table__cell--empty) {
    min-width: calcSize(15);
  }
}

.sd-matrixdropdown .sd-table__cell--header.sd-table__cell--empty {
  min-width: calcSize(15);
}

.sd-matrixdropdown .sd-table__cell--header.sd-table__cell--action {
  min-width: calcSize(3);
  width: calcSize(3);
}

.sd-matrixdropdown .sd-table__cell--header:not(.sd-table__cell--empty) {
  min-width: calcSize(15);

  &.sd-table__cell--dropdown,
  &.sd-table__cell--rating {
    min-width: calcSize(22);
  }

  &.sd-table__cell--boolean {
    min-width: calcSize(18);
  }
}

.sd-table__cell--footer {
  text-align: right;
}

.sd-table__cell--footer-total {
  font-weight: 600;
  text-align: left;
}

.sd-table__cell--detail-panel {
  border-top: calcSize(1) solid transparent;
  padding: calcSize(3) calcSize(1) calcSize(4);
  border-bottom: calcSize(1) solid transparent;
}

.sd-table__cell--actions,
.sd-matrixdynamic__add-btn {
  .sv-action-bar {
    overflow: visible;
  }
}
/* ... */

